# topk-haystack

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: embedding_pipeline.py  example.py  hybrid_pipeline.py  semantic_pipeline.py
src/haystack_integrations/components/example/: __init__.py  example_component.py
src/haystack_integrations/components/topk/: __init__.py  bm25_retriever.py  embedding_retriever.py  hybrid_retriever.py  metadata_retriever.py  semantic_retriever.py
src/haystack_integrations/document_stores/topk/: __init__.py  document_store.py  filters.py
tests/: conftest.py  test_bm25_retriever.py  test_document_store.py  test_embedding_retriever.py  test_example.py  test_filters.py  test_hybrid_retriever.py  test_metadata_retriever.py  test_semantic_retriever.py
